editors/tree-sitter-prologos/grammar.js
    source_file: $ => repeat(choice(
      $.top_level,
      $._newline,
    )),

    top_level: $ => choice(
      $.ns_declaration,
      $.provide_declaration,
      $.require_declaration,
      $.imports_declaration,
      $.exports_declaration,
      $.spec_form,
      $.defn_form,
      $.def_form,
      $.data_form,
      $.deftype_form,
      $.trait_form,
      $.impl_form,
      $.bundle_form,
      $.property_form,
      $.functor_form,
      $.defmacro_form,
      $.foreign_form,
      $.subtype_declaration,
      $.capability_declaration,
      $.relation_form,
      $.clause_form,
      $.check_form,
      $.eval_form,
      $.infer_form,
      $.let_top_level,
      $.expression,
    ),

    // ============================================================
    // Module declarations
    // ============================================================

    ns_declaration: $ => seq(
      'ns',
      field('name', $.qualified_name),
      optional(':no-prelude'),
    ),

    provide_declaration: $ => prec.right(seq(
      'provide',
      repeat1($.identifier),
    )),

    require_declaration: $ => seq(
      'require',
      '[',
      field('module', $.qualified_name),
      optional($.require_clause),
      ']',
    ),

    defn_form: $ => seq(
      'defn',
      field('name', $.identifier),
      optional(field('implicit_params', $.implicit_params)),
      optional(field('params', $.param_list)),
      optional(seq(':', field('return_type', $.type_expr))),
      $._indent,
      choice(
        repeat1($.defn_arm),
        field('body', $.block_body),
      ),
      $._dedent,
    ),

    // `| pattern... -> body`, mirroring `match_arm`.
    //
    // Two corrections over the pre-2026-08-14 rule, which was written as
    // `| param_list body` and therefore matched nothing the language emits:
    //   1. the arrow is REQUIRED and was absent entirely;
    //   2. clause heads are PATTERNS, not a bracketed param list — one per
    //      parameter, so `| n nil -> …` carries two.
    def_form: $ => seq(
      'def',
      field('name', $.identifier),
      optional(seq(':', field('type', $.type_expr))),
      optional(seq(':=', field('value', $.expression))),
      optional(seq(
        $._indent,
        field('body', $.block_body),
        $._dedent,
      )),
    ),

    // ============================================================
    // Data declarations
    // ============================================================

    data_form: $ => seq(
      'data',
      field('name', $.identifier),
      optional(field('type_params', $.data_params)),
      optional(seq(':', field('type', $.type_expr))),
      optional('where'),
      $._indent,
      repeat1($.data_constructor),
      $._dedent,
    ),

    data_constructor: $ => seq(
      optional('|'),
      field('name', $.identifier),
      optional(seq(':', field('type', $.type_expr))),
      optional($._newline),
    ),

    // ============================================================
    // Deftype declarations (type aliases)
    // ============================================================

    deftype_form: $ => seq(
      'deftype',
      field('signature', $.sexp),
      field('body', $.sexp),
    ),

    sexp: $ => choice(
      $.sexp_list,
      $.identifier,
    ),

    sexp_list: $ => seq('(', repeat1(choice($.sexp, '->')), ')'),

    // ============================================================
    // Trait system
    // ============================================================

    implicit_params: $ => seq(
      '{',
      repeat1(choice(
        $.typed_binder,
        $.identifier,
      )),
      '}',
    ),

    param_list: $ => seq(
      '[',
      repeat($.typed_param_or_bare),
      ']',
    ),

    typed_param: $ => prec(2, seq(
      field('name', $.identifier),
      optional(field('multiplicity', $.multiplicity)),
      ':',
      field('type', $.type_expr),
    )),

    multiplicity: $ => choice(':0', ':1', ':w'),

    // ============================================================
    // Block body (indentation-delimited)
    // ============================================================

    block_body: $ => repeat1(choice(
      $.match_expr,
      $._expression_line,
      $._newline,
    )),

    _expression_line: $ => $.expression,

    // ============================================================
    // Match expressions
    // ============================================================

    match_expr: $ => seq(
      'match',
      field('scrutinee', $.expression),
      $._indent,
      repeat1($.match_arm),
      $._dedent,
    ),

    match_arm: $ => prec.right(5, seq(
      '|',
      field('pattern', $.pattern),
      optional(seq('when', field('guard', $.expression))),
      '->',
      field('body', $.match_arm_body),
      optional($._newline),
    )),

    match_arm_body: $ => choice(
      $.match_expr,
      $.expression,
    ),

    // ============================================================
    // Patterns
    // ============================================================

    pattern: $ => choice(
      $.wildcard_pattern,
      $.constructor_pattern,
      $.literal_pattern,
      $.head_tail_pattern,
      $.identifier_pattern,
    ),

    constructor_pattern: $ => prec.left(2, seq(
      $.identifier,
      repeat1($.pattern_arg),
    )),

    identifier_pattern: $ => $.identifier,

    pattern_arg: $ => choice(
      $.identifier,
      '_',
      $.number,
      $.nat_literal,
      seq('[', repeat1($.pattern), ']'),
    ),

    // ============================================================
    // Expressions
    // ============================================================

    expression: $ => choice(
      $.fn_expr,
      $.let_expr,
      $.if_expr,
      $.cond_expr,
      $.do_expr,
      $.the_expr,
      $.pipe_expr,
      $.grouped_expr,
      $.paren_expr,
      $.angle_expr,
      $.application,
      $.atom,
    ),

    // Grouped expression: [expr1 expr2 ...] — primary grouping
    grouped_expr: $ => seq('[', repeat1($.expression), ']'),

    // Parenthesized expression: (keyword expr ...)
    paren_expr: $ => seq('(', repeat1($.expression), ')'),

    // Angle bracket expression: <(x : A) -> B>
    list_literal: $ => seq(
      "'[",
      repeat(choice(
        $.expression,
        seq('|', $.expression),
      )),
      ']',
    ),

    // Anonymous lambda: fn [params] body
    fn_expr: $ => prec.right(seq(
      'fn',
      repeat1($.fn_param),
      $.fn_body,
    )),

    fn_param: $ => choice(
      $.identifier,
      '_',
      $.param_list,  // [x : Type] binder group
    ),

    fn_body: $ => choice(
      $.grouped_expr,
      $.paren_expr,
      $.identifier,
    ),

    // Let expression: (let name := expr body) or let name := expr (WS)
    application: $ => prec.left(2, seq(
      $.expression,
      $.expression,
    )),

    atom: $ => choice(
      $.identifier,
      $.nat_literal,
      $.rat_literal,
      $.approx_literal,
      $.number,
      $.string,
      $.char_literal,
      $.keyword_literal,
      $.logic_variable,
      $.typed_hole,
      $.arrow_op,
      $.compose_op,
      $.list_literal,
      $.quote_expr,
      $.quasiquote_expr,
      $.unquote_expr,
      'true',
      'false',
    ),

    // ============================================================
    // Quote / quasiquote
    // ============================================================

    type_expr: $ => choice(
      $.arrow_type,
      $.type_application,
      $.grouped_type,
      $.identifier,
    ),

    arrow_type: $ => prec.right(1, seq(
      $.type_expr,
      '->',
      $.type_expr,
    )),

    type_application: $ => prec.left(2, seq(
      $.identifier,
      repeat1(choice($.identifier, $.grouped_type)),
    )),

    qualified_name: $ => /[a-zA-Z_][a-zA-Z0-9_.\-]+(::[\$a-zA-Z_][a-zA-Z0-9_.\-]*)*/,

    identifier: $ => /\$?[a-zA-Z_][a-zA-Z0-9_!?*+\-']*(::[\$a-zA-Z_][a-zA-Z0-9_!?*+\-']*)*/,

    number: $ => /[0-9]+(?:\.[0-9]+)?/,
