editors/tree-sitter-prologos/test/corpus/comments.txt
===
Comments are consumed as extras
===

;; header comment
ns test

---

(source_file
  (top_level
    (ns_declaration
      name: (qualified_name))))

===
Comment between definitions
===

ns test

;; section heading

defn pred [n : Nat] : Nat
  match n
    | zero -> zero
    | inc k -> k

---

(source_file
  (top_level
    (ns_declaration
      name: (qualified_name)))
  (top_level
    (defn_form
      name: (identifier)
      params: (param_list
        (typed_param
          name: (identifier)
          type: (type_expr
            (identifier))))
      return_type: (type_expr
        (identifier))
      body: (block_body
        (match_expr
          scrutinee: (expression
            (atom
              (identifier)))
          (match_arm
            pattern: (pattern
              (identifier_pattern
                (identifier)))
            body: (match_arm_body
              (expression
                (atom
                  (identifier)))))
          (match_arm
            pattern: (pattern
              (constructor_pattern
                (identifier)
                (pattern_arg
                  (identifier))))
            body: (match_arm_body
              (expression
                (atom
                  (identifier))))))))))
