editors/tree-sitter-prologos/test/corpus/data_simple.txt
===
Data type with no parameters
===

data Ordering
  lt-ord
  eq-ord
  gt-ord

---

(source_file
  (top_level
    (data_form
      name: (identifier)
      (data_constructor
        name: (identifier))
      (data_constructor
        name: (identifier))
      (data_constructor
        name: (identifier)))))
