editors/tree-sitter-prologos/test/corpus/match_basic.txt
===
Match with wildcard pattern
===

defn zero? [n : Nat] : Bool
  match n
    | zero -> true
    | inc _ -> false

---

(source_file
  (top_level
    (defn_form
      name: (identifier)
      params: (param_list
        (typed_param
          name: (identifier)
          type: (type_expr
            (identifier))))
      return_type: (type_expr
        (identifier))
      body: (block_body
        (match_expr
          scrutinee: (expression
            (atom
              (identifier)))
          (match_arm
            pattern: (pattern
              (identifier_pattern
                (identifier)))
            body: (match_arm_body
              (expression
                (atom
                  (identifier)))))
          (match_arm
            pattern: (pattern
              (constructor_pattern
                (identifier)
                (pattern_arg)))
            body: (match_arm_body
              (expression
                (atom
                  (identifier))))))))))

===
Match with parenthesized body expression
===

defn add [x : Nat, y : Nat] : Nat
  match y
    | zero -> x
    | inc k -> inc (add x k)

---

(source_file
  (top_level
    (defn_form
      name: (identifier)
      params: (param_list
        (typed_param
          name: (identifier)
          type: (type_expr
            (identifier)))
        (typed_param
          name: (identifier)
          type: (type_expr
            (identifier))))
      return_type: (type_expr
        (identifier))
      body: (block_body
        (match_expr
          scrutinee: (expression
            (atom
              (identifier)))
          (match_arm
            pattern: (pattern
              (identifier_pattern
                (identifier)))
            body: (match_arm_body
              (expression
                (atom
                  (identifier)))))
          (match_arm
            pattern: (pattern
              (constructor_pattern
                (identifier)
                (pattern_arg
                  (identifier))))
            body: (match_arm_body
              (expression
                (application
                  (expression
                    (atom
                      (identifier)))
                  (expression
                    (paren_expr
                      (expression
                        (application
                          (expression
                            (application
                              (expression
                                (atom
                                  (identifier)))
                              (expression
                                (atom
                                  (identifier)))))
                          (expression
                            (atom
                              (identifier))))))))))))))))
